fix gap between tab and content

--- a/app/component/search/search.scss
+++ b/app/component/search/search.scss
@@ -195,6 +195,8 @@ $search-header-height: 45px;
   line-height: 1;
   display: flex;
   flex: 0 0 auto;
+  margin-bottom: -1px;
+  z-index: 1;
 
   a {
     color: $primary-color;
